/*
Copyright (C) 2024 Nordix Foundation.
For a full list of individual contributors, please see the commit history.
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

	http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";
package proto;
option go_package = "./proto";

message HeaderValue {
    string value = 1;
}

message HeaderEntry {
    string key = 1;
    repeated HeaderValue values = 2;
}

message TranslateEventRequest {
    string event = 1;
    repeated HeaderEntry headers = 2;
}

message TranslateEventResponse {
    string event = 1;
}

service EventTranslator {
    rpc TranslateEvent (TranslateEventRequest) returns (TranslateEventResponse);
}